--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Find the best Thai massage near you" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@400;600;700;800&family=Sarabun:wght@400;600;700;800&display=swap" rel="stylesheet">
     <title>Jovan Happy Times Thai Massage Finder</title>
   </head>
   <body>
